# x-todos

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.ts  package-lock.json  package.json  tsconfig.json  turbo.json  vitest.config.ts
.devcontainer/: devcontainer.json  install-tools.sh
.github/: dependabot.yml
.github/workflows/: cargo-ci.yml  node-ci.yml
client-side/tools/tsconfig/: package.json  tsconfig.json
client-side/vue-client/implementation/: package.json
client-side/vue-client/interface/: package.json  tsconfig.build.json
client-side/web/: package.json  vite.config.ts
client-side/web-app/: package.json
client-side/web-app/src/: Todo.vue
client-side/web-client/fetch/: package.json  tsconfig.build.json
client-side/web-client/interface/: tsconfig.test.json
client-side/web/src/: App.vue  NewTodoForm.vue  Todo.vue  TodoList.vue
hello-wasm/: Cargo.toml
hello-wasm/src/: lib.rs  todos.rs
server-side/app/: Cargo.toml
server-side/app/src/: main.rs
server-side/todos-axum/: Cargo.toml
server-side/todos-axum/src/: lib.rs  new_todo_resource.rs  root_resource.rs  router.rs  services.rs  todo_list_resource.rs  todo_resource.rs  updated_todo_resource.rs
server-side/todos/src/: error.rs  lib.rs  new_todo.rs  service.rs  updated_todo.rs
todos-wasm/: Cargo.toml  package.json
todos-wasm/src/: greet.rs  todo.rs
todos/src/: lib.rs  persisted_todo.rs  service.rs  todo.rs
tools/tsconfig/: tsconfig.json
web/: package-lock.json  package.json
web-client/interface/: package.json
web/src/components/: HelloWorld.vue
(+19 files in other folders)
