[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8" }
todos = { path = "../todos" }
todos-axum = { path = "../todos-axum" }
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
